--- a/src/main/resources/templates/new_student.html
+++ b/src/main/resources/templates/new_student.html
@@ -20,6 +20,12 @@
 
         <input type="text" th:field="*{email}" placeholder="Student Email" class="form-control mb-4 col-4">
 
+        <input type="text" th:field="*{branch}" placeholder="Branch" class="form-control mb-4 col-4">
+
+        <input type="text" th:field="*{age}" placeholder="Age" class="form-control mb-4 col-4">
+
+        <input type="text" th:field="*{address}" placeholder="Address" class="form-control mb-4 col-4">
+
 
         <button type="submit" class="btn btn-info col-2"> Save Student</button>
     </form>
