--- a/src/main/resources/templates/update_student.html
+++ b/src/main/resources/templates/update_student.html
@@ -25,6 +25,12 @@
 
         <input type="text" th:field="*{email}" class="form-control mb-4 col-4">
 
+        <input type="text" th:field="*{branch}" class="form-control mb-4 col-4">
+
+        <input type="text" th:field="*{age}" class="form-control mb-4 col-4">
+
+        <input type="text" th:field="*{address}" class="form-control mb-4 col-4">
+
         <button type="submit" class="btn btn-info col-2"> Update Student</button>
     </form>
 
