EMPLOYEE AND STUDENT MANAGEMENT SERVICE , DOCUMENT/UPLOAD

--- a/src/main/resources/templates/new_student.html
+++ b/src/main/resources/templates/new_student.html
@@ -33,7 +33,7 @@
 
     <hr>
 
-    <a th:href="@{/show_webpage}"> Back to Student List</a>
+    <a th:href="@{/}"> Back to Student List</a>
 </div>
 </body>
 
