--- a/src/main/resources/templates/new_employee.html
+++ b/src/main/resources/templates/new_employee.html
@@ -25,7 +25,7 @@
 
     <hr>
 
-    <a th:href="@{/}"> Back to Employee List</a>
+    <a th:href="@{/emp}"> Back to Employee List</a>
 </div>
 </body>
 
